deployment.yaml
# Author: Vangala Sai Rohith
# 
# Deployment for Invoicing Pricing ASP.NET 7 application
# 
# Since it's an EKS cluster created by ekctl, it's already authorized by default
# to fetch the image from ECR

apiVersion: apps/v1
kind: Deployment
metadata:
  name: invpricing-poc-deployment
  namespace: jmi-poc-ns01
spec:
  replicas: 2
  revisionHistoryLimit: 3
  progressDeadlineSeconds: 600
  minReadySeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: invpricing-poc
  template:
    metadata:
      namespace: jmi-poc-ns01
      labels:
        app: invpricing-poc
    spec:
      containers:
      - name: inventorypricing-api
        image: 957315603675.dkr.ecr.ap-south-1.amazonaws.com/mastery-inventory-pricing:0.1
        resources:
          limits:
            memory: "512Mi"
            cpu: "250m"
        ports:
        - containerPort: 80

---

# A simple NodePort service to serve the Invoicing API
# on the Nodes' public IP. 
# The security group has to be updated to allow
# inbound connections on the port generated by the service

apiVersion: v1
kind: Service
metadata:
  namespace: jmi-poc-ns01
  name: invpricing-poc-service
spec:
  type: NodePort
  selector:
    app: invpricing-poc
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30050
