istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mastery-gateway
  namespace: jmi-poc-ns01
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mastery-virtualservice
  namespace: jmi-poc-ns01
spec:
  hosts:
  - "invoicing.mastery.srrdevcloud.in"
  gateways:
  - mastery-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: invpricing-poc-service
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mastery-inventory-virtualservice
  namespace: jmi-poc-ns01
spec:
  hosts:
  - "inventory.mastery.srrdevcloud.in"
  gateways:
  - mastery-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: jmi-poc-service
